# Mac2Windows

./: README.md  packages.config  pyproject.toml  test_output.py
.trae/documents/: Achieve 1_1 Parity Mac↔Windows Conversion.md  Convert App To Cross-Platform CLI Converter.md  Finalize Cross-Platform CLI Converter.md
backend/: config.py  main.py  requirements.txt
backend/ai/: clients.py  model_router.py  orchestrator.py  prompts.py  provider_registry.py
backend/api/: app.py  globals.py  utils.py
backend/api/routes/: backups.py  community.py  conversion.py  settings.py  system.py
backend/batch/: manager.py
backend/cli/: __main__.py
backend/conversion/: assets.py  batch.py  chunker.py  cleanup.py  cost_tracker.py  dependencies.py  diff.py  error_recovery.py  git_utils.py  implementations.py  incremental.py  manager.py  mappings.py  models.py  preview.py  progress.py  project.py  project_types.py  rag.py  resources.py  session_store.py  tests.py  validators.py  webhooks.py
backend/detection/: scanner.py
backend/learning/: memory.py
backend/logging/: event_logger.py
backend/performance/: benchmark.py
backend/quality/: engine.py
backend/reports/: generator.py
backend/resources/: monitor.py
backend/security/: licenses.py  osv_client.py  scanner.py  secret_manager.py  vulnerabilities.py
backend/storage/: backup.py  credentials.py  embeddings.py  state_store.py  templates.py
backend/templates/: manager.py
data/: credentials.db  incremental.json  state.db
data/secrets/: fernet.key
electron/: .eslintrc.cjs  main.js  package.json  preload.js
(+4 files in other folders)
