[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macwin-converter"
version = "0.1.0"
description = "Mac ↔ Windows universal converter CLI"
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.109.2",
  "uvicorn[standard]==0.27.1",
  "pydantic==1.10.13",
  "psutil==5.9.8",
  "chromadb==0.4.24",
  "python-dotenv==1.0.1",
  "httpx==0.26.0",
  "requests==2.31.0",
  "Pillow==10.2.0",
  "GitPython==3.1.42",
  "pygit2==1.13.1",
  "cachetools==6.2.1",
  "license-expression==30.4.4",
  "aiohttp==3.13.0",
  "cryptography==42.0.5"
]

[project.scripts]
macwin = "backend.cli.__main__:main"
